--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "awsbuild": "ng build --prod --aot --named-chunks --build-optimizer --vendor-chunk --output-hashing all --extract-css true --base-href /",
-    "aws-deploy": "npm run awsbuild && aws s3 rm s3://elevatesign --recursive && aws s3 sync dist/ s3://elevatesign"
+    "aws-deploy": "npm install && npm run awsbuild && aws s3 rm s3://elevatesign --recursive && aws s3 sync dist/ s3://elevatesign"
   },
   "private": true,
   "dependencies": {
@@ -60,7 +60,7 @@
     "chart.js": "^2.9.2",
     "core-js": "^3.6.4",
     "datatables.net-dt": "1.10.20",
-    "esigndoccontrol": "https://github.com/pratikidea/doceditor/files/5267955/esigndoccontrol-0.0.21.zip",
+    "esigndoccontrol": "https://github.com/pratikidea/doceditor/files/5288549/esigndoccontrol-0.0.24.zip",
     "flag-icon-css": "^3.4.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
