--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "awsbuilduat": "ng build --uat --aot --named-chunks --build-optimizer --vendor-chunk --output-hashing all --extract-css true --base-href /",
     "aws-deploy-uat": "npm install && npm run awsbuilduat && aws s3 rm s3://elevatesign --recursive --profile elevateuat && aws s3 sync dist/ s3://elevatesign --profile elevateuat",
     "awsbuildprod": "ng build --prod --aot --named-chunks --build-optimizer --vendor-chunk --output-hashing all --extract-css true --base-href /",
-    "aws-deploy-live": "npm install && npm run awsbuildprod && aws s3 rm s3://elevate-esign-sign --recursive --profile elevatelive && aws s3 sync dist/ s3://elevate-esign-sign --profile elevatelive"
+    "aws-deploy-live": "npm install && npm run awsbuildprod && aws s3 rm s3://elevate-esign-sign --recursive --profile elevatelive && aws s3 sync dist/ s3://elevate-esign-sign --profile elevatelive",
+    "aws-deploy-both": "npm run aws-deploy-uat && npm run aws-deploy-live"
   },
   "private": true,
   "dependencies": {
