--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "chart.js": "^2.9.2",
     "core-js": "^3.6.4",
     "datatables.net-dt": "1.10.20",
-    "esigndoccontrol": "https://github.com/pratikidea/doceditor/files/5573298/esigndoccontrol-0.0.34.zip",
+    "esigndoccontrol": "https://github.com/mideas2tech/doceditor/releases/download/0.0.39.3/esigndoccontrol-0.0.39.3.zip",
     "flag-icon-css": "^3.4.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
